src/Compiler/Syntax/tests/data/Strings.error
error: empty character literal
        --> <source>:1:1
         |
       1 | ''
         | ^^
error: character literal may only contain one codepoint
        --> <source>:3:1
         |
       3 | '    '
         | ^^^^^^
error: character literal may only contain one codepoint
        --> <source>:4:1
         |
       4 | '          '
         | ^^^^^^^^^^^^
error: character literal may only contain one codepoint
        --> <source>:6:1
         |
       6 | '❤️'
         | ^^^^^^^^
error: invalid unicode character escape sequence
        --> <source>:13:3
         |
      13 | '\u{123456}'
         |   ^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:14:11
         |
      14 | '\u{1234567}'
         |           ^
error: invalid character escape sequence
        --> <source>:14:3
         |
      14 | '\u{1234567}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:14:1
         |
      14 | '\u{1234567}'
         | ^^^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:15:11
         |
      15 | '\u{12345678}'
         |           ^
error: invalid character escape sequence
        --> <source>:15:3
         |
      15 | '\u{12345678}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:15:1
         |
      15 | '\u{12345678}'
         | ^^^^^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:16:3
         |
      16 | '\u1}'
         |   ^
error: invalid character escape sequence
        --> <source>:16:3
         |
      16 | '\u1}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:16:1
         |
      16 | '\u1}'
         | ^^^^^^
error: expected '{' after '\u'
        --> <source>:17:3
         |
      17 | '\u12}'
         |   ^
error: invalid character escape sequence
        --> <source>:17:3
         |
      17 | '\u12}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:17:1
         |
      17 | '\u12}'
         | ^^^^^^^
error: expected '{' after '\u'
        --> <source>:18:3
         |
      18 | '\u123}'
         |   ^
error: invalid character escape sequence
        --> <source>:18:3
         |
      18 | '\u123}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:18:1
         |
      18 | '\u123}'
         | ^^^^^^^^
error: expected '{' after '\u'
        --> <source>:19:3
         |
      19 | '\u1234}'
         |   ^
error: invalid character escape sequence
        --> <source>:19:3
         |
      19 | '\u1234}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:19:1
         |
      19 | '\u1234}'
         | ^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:20:3
         |
      20 | '\u12345}'
         |   ^
error: invalid character escape sequence
        --> <source>:20:3
         |
      20 | '\u12345}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:20:1
         |
      20 | '\u12345}'
         | ^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:21:3
         |
      21 | '\u123456}'
         |   ^
error: invalid character escape sequence
        --> <source>:21:3
         |
      21 | '\u123456}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:21:1
         |
      21 | '\u123456}'
         | ^^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:22:3
         |
      22 | '\u1234567}'
         |   ^
error: invalid character escape sequence
        --> <source>:22:3
         |
      22 | '\u1234567}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:22:1
         |
      22 | '\u1234567}'
         | ^^^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:23:3
         |
      23 | '\u12345678}'
         |   ^
error: invalid character escape sequence
        --> <source>:23:3
         |
      23 | '\u12345678}'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:23:1
         |
      23 | '\u12345678}'
         | ^^^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:24:6
         |
      24 | '\u{1'
         |      ^
error: invalid character escape sequence
        --> <source>:24:3
         |
      24 | '\u{1'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:24:1
         |
      24 | '\u{1'
         | ^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:25:7
         |
      25 | '\u{12'
         |       ^
error: invalid character escape sequence
        --> <source>:25:3
         |
      25 | '\u{12'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:25:1
         |
      25 | '\u{12'
         | ^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:26:8
         |
      26 | '\u{123'
         |        ^
error: invalid character escape sequence
        --> <source>:26:3
         |
      26 | '\u{123'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:26:1
         |
      26 | '\u{123'
         | ^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:27:9
         |
      27 | '\u{1234'
         |         ^
error: invalid character escape sequence
        --> <source>:27:3
         |
      27 | '\u{1234'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:27:1
         |
      27 | '\u{1234'
         | ^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:28:10
         |
      28 | '\u{12345'
         |          ^
error: invalid character escape sequence
        --> <source>:28:3
         |
      28 | '\u{12345'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:28:1
         |
      28 | '\u{12345'
         | ^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:29:11
         |
      29 | '\u{123456'
         |           ^
error: invalid character escape sequence
        --> <source>:29:3
         |
      29 | '\u{123456'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:29:1
         |
      29 | '\u{123456'
         | ^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:30:11
         |
      30 | '\u{1234567'
         |           ^
error: invalid character escape sequence
        --> <source>:30:3
         |
      30 | '\u{1234567'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:30:1
         |
      30 | '\u{1234567'
         | ^^^^^^^^^^^^
error: missing closing '}' on unicode sequence
        --> <source>:31:11
         |
      31 | '\u{12345678'
         |           ^
error: invalid character escape sequence
        --> <source>:31:3
         |
      31 | '\u{12345678'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:31:1
         |
      31 | '\u{12345678'
         | ^^^^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:32:3
         |
      32 | '\u1'
         |   ^
error: invalid character escape sequence
        --> <source>:32:3
         |
      32 | '\u1'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:32:1
         |
      32 | '\u1'
         | ^^^^^
error: expected '{' after '\u'
        --> <source>:33:3
         |
      33 | '\u12'
         |   ^
error: invalid character escape sequence
        --> <source>:33:3
         |
      33 | '\u12'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:33:1
         |
      33 | '\u12'
         | ^^^^^^
error: expected '{' after '\u'
        --> <source>:34:3
         |
      34 | '\u123'
         |   ^
error: invalid character escape sequence
        --> <source>:34:3
         |
      34 | '\u123'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:34:1
         |
      34 | '\u123'
         | ^^^^^^^
error: expected '{' after '\u'
        --> <source>:35:3
         |
      35 | '\u1234'
         |   ^
error: invalid character escape sequence
        --> <source>:35:3
         |
      35 | '\u1234'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:35:1
         |
      35 | '\u1234'
         | ^^^^^^^^
error: expected '{' after '\u'
        --> <source>:36:3
         |
      36 | '\u12345'
         |   ^
error: invalid character escape sequence
        --> <source>:36:3
         |
      36 | '\u12345'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:36:1
         |
      36 | '\u12345'
         | ^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:37:3
         |
      37 | '\u123456'
         |   ^
error: invalid character escape sequence
        --> <source>:37:3
         |
      37 | '\u123456'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:37:1
         |
      37 | '\u123456'
         | ^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:38:3
         |
      38 | '\u1234567'
         |   ^
error: invalid character escape sequence
        --> <source>:38:3
         |
      38 | '\u1234567'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:38:1
         |
      38 | '\u1234567'
         | ^^^^^^^^^^^
error: expected '{' after '\u'
        --> <source>:39:3
         |
      39 | '\u12345678'
         |   ^
error: invalid character escape sequence
        --> <source>:39:3
         |
      39 | '\u12345678'
         |   ^
error: character literal may only contain one codepoint
        --> <source>:39:1
         |
      39 | '\u12345678'
         | ^^^^^^^^^^^^
error: raw string literal terminator too long
        --> <source>:50:7
         |
      50 | r#"abc"##
         |       ^^^
error: raw string literal terminator too long
        --> <source>:55:1
         |
      55 | "####
         | ^^^^^
error: raw string literal terminator too long
        --> <source>:56:3
         |
      56 | r""##
         |   ^^^
error: unexpected character
        --> <source>:62:2
         |
      62 | r#~"#"~#
         |  ^
